fix: fixing possible default z-index problems

--- a/packages/components/src/components/date-picker/date-picker.css
+++ b/packages/components/src/components/date-picker/date-picker.css
@@ -22,6 +22,7 @@ duet-date-picker {
   --duet-color-button: var(--telekom-color-background-surface);
   --duet-color-surface: var(--telekom-color-background-surface);
   --duet-z-index: 600;
+  --duet-z-index-toggle: 2;
 
   --spacing-heading: 0 0 var(--telekom-spacing-unit-x4) 0;
   --font-size-heading: var(--telekom-typography-font-size-callout);
@@ -58,6 +59,7 @@ duet-date-picker .duet-date__toggle {
   border-radius: 0 var(--duet-radius) var(--duet-radius) 0;
   background: transparent;
   box-shadow: inset 1px 0 0 var(--telekom-color-ui-additional-light);
+  z-index: var(--duet-z-index-toggle);
 }
 
 duet-date-picker .duet-date__toggle:focus {
@@ -100,6 +102,7 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
 }
 
 .scale-date-picker {
+  --z-index-label: 10;
   position: relative;
 }
 
@@ -124,7 +127,7 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
   left: 0;
   color: var(--telekom-color-text-and-icon-additional);
   display: flex;
-  z-index: 10;
+  z-index: var(--z-index-label);
   position: absolute;
   transition: all var(--telekom-motion-duration-transition)
     var(--telekom-motion-easing-standard);
@@ -207,7 +210,7 @@ duet-date-picker .duet-date__input:focus::placeholder {
   left: 0;
   color: var(--telekom-color-text-and-icon-additional);
   display: flex;
-  z-index: 10;
+  z-index: var(--z-index-label);
   position: absolute;
   transition: all var(--telekom-motion-duration-transition)
     var(--telekom-motion-easing-standard);
